force-app/main/default/objects/ScheduledCourseDay__c/ScheduledCourseDay__c.object-meta.xml
<CustomObject>
    <description>Schedule days for training course</description>
    <label>Scheduled Course Day</label>
    <nameField>
        <displayFormat>DAY-{0000}</displayFormat>
        <label>ScheduledCourseDay Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ScheduledCourseDays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>