force-app/main/default/objects/ScheduledCourseDay__c/fields/Option_Group__c.field-meta.xml
<CustomField>
    <fullName>Option_Group__c</fullName>
    <label>Option Group</label>
    <length>25</length>
    <type>Text</type>
</CustomField>