force-app/main/default/objects/ScheduledCourseDay__c/fields/ScheduledCourseId__c.field-meta.xml
<CustomField>
    <fullName>ScheduledCourseId__c</fullName>
    <label>Scheduled Course</label>
    <referenceTo>ScheduledCourse__c</referenceTo>
    <relationshipLabel>ScheduledCourseDays</relationshipLabel>
    <relationshipName>ScheduledCourseDays</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>