force-app/main/default/objects/ScheduledCourseDay__c/fields/SessionName__c.field-meta.xml
<CustomField>
    <fullName>SessionName__c</fullName>
    <label>Session Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>